--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,63 @@
 [tool.ruff]
+# Credit to @mikeshardmind for most of this setup.
 line-length = 120
+target-version = "py311"
+select = [
+    "F",
+    "E",
+    "I",
+    "UP",
+    "YTT",
+    "ANN",
+    "S",
+    "BLE",
+    "B",
+    "A",
+    "COM",
+    "C4",
+    "DTZ",
+    "EM",
+    "ISC",
+    "G",
+    "INP",
+    "PIE",
+    "T20",
+    "Q003",
+    "RSE",
+    "RET",
+    "SIM",
+    "TID",
+    "PTH",
+    "ERA",
+    "PD",
+    "PLC",
+    "PLE",
+    "PLR",
+    "PLW",
+    "TRY",
+    "NPY",
+    "RUF",
+]
+extend-ignore = [
+    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
+    "S101",    # Use of assert here is a known quantity.
+    "PLR2004", # Magic value comparison.
+    "SIM105",  # Suppressable exception. I'm not paying the overhead of contextlib.suppress for stylistic choices.
+    "C90",     # McCabe complexity memes.
+    "ANN204",  # Special method return types.
+    "ANN101",  # Type of self is implicit.
+    "PLR",     # complexity things
+    "COM812",  # recommended by ruff when using ruff format
+    "COM819",  # recommended by ruff when using ruff format
+    "E501",    # recommended by ruff when using ruff format
+    "ISC001",  # recommended by ruff when using ruff format
+    "Q003",    # recommended by ruff when using ruff format
+    "T201",    # Prints are fine for AOC.
+]
+unfixable = [
+    "ERA", # I don't want anything erroneously detected deleted by this.
+]
+
+[tool.pyright]
+typeCheckingMode = "strict"
+pythonVersion = "3.11"
